--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,6 +10,10 @@
   </head>
 
   <body>
+    <div class="nav">
+      <p>Simple Airbnb</p>
+      <p>Add Flat</p>
+    </div>
     <%= yield %>
   </body>
 </html>
